RESOLVED FIXED227981
Non-unified build fixes, mid-July 2021 edition
https://bugs.webkit.org/show_bug.cgi?id=227981
Summary Non-unified build fixes, mid-July 2021 edition
Adrian Perez
Reported 2021-07-15 00:23:10 PDT
🎶 Hot summer streets And the pavements are burning I sit around Trying to smile But the air is so heavy and dry 🎹
Attachments
Patch (9.86 KB, patch)
2021-07-15 04:27 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2021-07-15 04:27:47 PDT
EWS
Comment 2 2021-07-15 05:40:47 PDT
Committed r279941 (239685@main): <https://commits.webkit.org/239685@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 433575 [details].
Radar WebKit Bug Importer
Comment 3 2021-07-15 05:41:18 PDT
Note You need to log in before you can comment on or make changes to this bug.