Non-unified build fixes, mid-July 2021 edition https://bugs.webkit.org/show_bug.cgi?id=227981

Unreviewed non-unified build fixes.


Source/JavaScriptCore:

* ftl/FTLState.cpp: Add missing B3ValueInlines.h header.
* runtime/TemporalNow.cpp: Add missing JSCJSValueInlines.h and JSObjectInlines.h headers.
* runtime/TemporalObject.cpp: Ditto.

Source/WebCore:

* accessibility/AXObjectCache.cpp: Add missing AXImage.h and RenderImage.h headers.
* bindings/js/JSIntersectionObserverCustom.cpp:
(WebCore::JSIntersectionObserverOwner::isReachableFromOpaqueRoots): Add missing namespace to
usage of JSC::jsCast<T>() template.
* bindings/js/JSResizeObserverCustom.cpp: Add missing Element.h and JSNodeCustom.h headers.
(WebCore::JSResizeObserverOwner::isReachableFromOpaqueRoots): Add missing namespace to usage
of JSC::jsCast<T>() template.
* css/CSSCrossfadeValue.h: Add missing forward declaration of Style::BuilderState.
* css/parser/CSSPropertyParserWorkerSafe.cpp: Add missing ParsingUtilities.h header.
* platform/graphics/cairo/GradientCairo.cpp: Replace GraphicsContext.h header with
GraphicsContextCairo.h to avoid errors about undefined types.
* rendering/style/RenderStyleConstants.cpp: Add missing CSSPrimitiveValueMappings.h header.

Source/WebKit:

* UIProcess/ProcessAssertion.cpp: Add missing wtf/RunLoop.h header.


Canonical link: https://commits.webkit.org/239685@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279941 268f45cc-cd09-0410-ab3c-d52691b4dbfc