Source/WebCore/bindings/js/JSResizeObserverCustom.cpp
@@ -27,6 +27,8 @@
 #include "config.h"
 #include "JSResizeObserver.h"
 
+#include "Element.h"
+#include "JSNodeCustom.h"
 #include <JavaScriptCore/JSCInlines.h>
 
 namespace WebCore {
@@ -43,7 +45,7 @@ DEFINE_VISIT_ADDITIONAL_CHILDREN(JSResizeObserver);
 
 bool JSResizeObserverOwner::isReachableFromOpaqueRoots(JSC::Handle<JSC::Unknown> handle, void*, JSC::AbstractSlotVisitor& visitor, const char**reason)
 {
-    if (jsCast<JSResizeObserver*>(handle.slot()->asCell())->wrapped().isReachableFromOpaqueRoots(visitor)) {
+    if (JSC::jsCast<JSResizeObserver*>(handle.slot()->asCell())->wrapped().isReachableFromOpaqueRoots(visitor)) {
         if (UNLIKELY(reason))
             *reason = "Reachable from observed nodes";
         return true;
